--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,13 +1,11 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Num:</strong>
-  <%= @question.num %>
-</p>
-
-<p>
   <strong>Page:</strong>
   <%= @question.page %>
+
+  <strong>Num:</strong>
+  <%= @question.num %>
 </p>
 
 <p>
@@ -16,8 +14,20 @@
 </p>
 
 <p>
+  <strong>Amswer:</strong>
+  <%= @question.answer %>
+</p>
+
+<p>
   <strong>Notes:</strong>
   <%= @question.notes %>
+</p>
+
+<p>
+  <strong>Topics:</strong>
+  <% @question.topics.each do |t| %>
+    <td><%=  t.topicName %></td>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_question_path(@question) %> |
