--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -8,16 +8,16 @@
   <%= @question.num %>
 </p>
 
+<pre>
 <p>
   <strong>Qtext:</strong>
   <%= @question.qtext %>
 </p>
-
 <p>
   <strong>Amswer:</strong>
   <%= @question.answer %>
 </p>
-
+</pre>
 <p>
   <strong>Notes:</strong>
   <%= @question.notes %>
