--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -30,14 +30,24 @@
  <div class="field">
     <%= f.label :notes %><br>
     <%= f.text_area :notes, "cols" => 120, "rows" => 7 %>
-  </div>
+ </div>
+
+ <div class="field">
+   <% for topic in Topic.find(:all) %>
+     <%= check_box_tag "question[topic_ids][]", topic.id, @question.topics.include?(topic) %>
+     <%= topic.topicName %>
+   <%end%>
+</div>
+
+<% if false %>
   <div class="field">
     <%= fields_for :topic do |tf| %>
       <%= tf.label :topics %><br>
       <%= tf.collection_check_boxes :topic_id, Topic.all, :id, :topicName %>
-  
     <% end %>
   </div>
+<% end %>
+
 <div class="actions">
     <%= f.submit %>
   </div>
