--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -12,24 +12,22 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :num %><br>
+    <%= f.label :num %>
     <%= f.number_field :num %>
-  </div>
-  <div class="field">
-    <%= f.label :page %><br>
+    <%= f.label :page %>
     <%= f.number_field :page %>
   </div>
   <div class="field">
-    <%= f.label :qtext %><br>
-    <%= f.text_area :qtext, "cols" => 120, "rows" => 10 %>
+    <%= f.label :qtext %>
+    <%= f.text_area :qtext,  "rows" => 7 %>
   </div>
   <div class="field">
-    <%= f.label :answer %><br>
-    <%= f.text_area :answer, "cols" => 120, "rows" => 7 %>
+    <%= f.label :answer %>
+    <%= f.text_area :answer, "rows" => 7 %>
   </div>
  <div class="field">
-    <%= f.label :notes %><br>
-    <%= f.text_area :notes, "cols" => 120, "rows" => 7 %>
+    <%= f.label :notes %>
+    <%= f.text_area :notes,  "rows" => 3 %>
  </div>
 
  <div class="field">
