--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -14,7 +14,7 @@
   <%= @question.qtext %>
 </p>
 <p>
-  <strong>Amswer:</strong>
+  <strong>Answer:</strong>
   <%= @question.answer %>
 </p>
 </pre>
