after page 15 plus file upload added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,15 @@
   
   <style>
   label { padding: 0; margin: 0; display: block; }
-  textarea { width: 99%; border: 1px solid #333; padding: 4px; font-family: "Courier New", Courier, monospace; }
   textfield { width: 100%; border: 1px solid #333; padding: 4px; }
+  textarea { width: 99%; border: 1px solid #333; padding: 4px; font-family: "Courier New", Courier, monospace; }
   .the-fix { padding-right: 20px; }
  </style>
   
 </head>
 <body>
 <div class="container-fluid">
-<div class="navbar navbar-fixed-top">  
+<div class="navbar navbar-inverse">  
   <div class="navbar-inner">  
     <div class="container">  
       <ul class="nav">  
