--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,7 +1,7 @@
 body {
   background-color: #afa;
   color: #333;
-  font-family: "Lucida Console", Monaco, "Courier New", Courier, monospace;
+  font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
 }
@@ -10,6 +10,10 @@ p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
   line-height: 18px;
+}
+
+textarea {
+  font-family: "Lucida Console", Monaco, "Courier New", Courier, monospace;
 }
 
 pre {
