--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@question) do |f| %>
+<%= form_for(@question, :html => {:multipart => true}) do |f| %>
   <% if @question.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
@@ -20,6 +20,7 @@
   <div class="field">
     <%= f.label :qtext %>
     <%= f.text_area :qtext,  "rows" => 7 %>
+    <%= f.file_field :qimage %>
   </div>
   <div class="field">
     <%= f.label :answer %>
