--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -26,6 +26,7 @@
 <p>
   <strong>Image:</strong>
   <%= image_tag @question.qimage.url(:thumb).to_s %>
+  <%= image_tag @question.aimage.url(:thumb).to_s %>
 </p>
 
 <p>
