basic devise setup

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
-<meta charset="utf-8">
+   
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="<%= meta_description %>">
@@ -35,6 +35,11 @@
           <a class="brand" href="#">TrevorPBL</a>  
         </li>  
         <li class="<%= 'active' if current_page?(root_path) %>"><%= link_to "Home", root_path %></li>
+        <% if user_signed_in? %>
+          <li class="<%= 'active' if current_page?(destroy_user_session_path) %>"><%= link_to "Sign Out", destroy_user_session_path, :method => :delete %></li>
+        <% else %>
+          <li class="<%= 'active' if current_page?(new_user_session_path) %>"><%= link_to "Sign In", new_user_session_path %>
+        <% end %>
         <li class="<%= 'active' if current_page?(questions_path) %>"><%= link_to "Questions", questions_path %></li>  
         <li class="<%= 'active' if current_page?(topics_path) %>"><%= link_to "Topics", topics_path %></li>  
         <li class="<%= 'active' if current_page?(about_path) %>"><%= link_to "About", about_path %></li>  
@@ -43,6 +48,10 @@
   </div>  
 </div>
 <%= yield %>
+<% if user_signed_in? %>
+   Signed in as <%= current_user.email %>
+<% end %>
 </div>
+
 </body>
 </html>
