--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -1,3 +1,29 @@
 // Place all the styles related to the questions controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+td {
+  text-align: right;
+}
+
+table, th, td {
+   border: 1px solid black;
+   padding: 0px 3px 0px 5px;
+}
+
+th {
+    border: 2px solid black; 
+    font-size: 1.1em;
+    text-align: center;
+    padding-top: 2px;
+    padding-bottom: 1px;
+    background-color: #87C942;
+    color: #000000;
+}
+
+.q_page_gteq {
+   size: 3;
+}
+
+
+
