--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,6 +1,8 @@
 <h2>List of Questions</h2>
 
-<%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
+<% if can? :create, Question %>
+  <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
+<% end %>
 <%= link_to 'Topics', topics_path, :class => 'btn btn-mini' %>
 <%= " There are currently #{Question.count} questions in the list, spread over #{Question.maximum("page")} pages." %>
 <br>
@@ -45,14 +47,19 @@
         <td><%= question.topics.count %></td>
         <td><%= i %></td>
         <td><%= link_to 'Show', question, :class => 'btn btn-mini' %></td>
-        <td><%= link_to 'Edit', edit_question_path(question), :class => 'btn btn-mini' %></td>
-        <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-mini' %></td>
+        <% if can? :update, question %>
+          <td><%= link_to 'Edit', edit_question_path(question), :class => 'btn btn-mini' %></td>
+        <% end %>
+        <% if can? :destroy, question %>
+          <td><%= link_to 'Destroy', question, method: :delete, data: { confirm: 'Are you sure?' }, :class => 'btn btn-mini' %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
+<% if can? :create, Question %>
+  <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
+<% end %>
 <%= link_to 'Topics', topics_path, :class => 'btn btn-mini' %>
