--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -10,5 +10,7 @@
   <%= @topic.comments %>
 </p>
 
-<%= link_to 'Edit', edit_topic_path(@topic) %> |
-<%= link_to 'Back', topics_path %>
+<% if can? :update, @topic %>
+  <%= link_to 'Edit', edit_topic_path(@topic), :class => 'btn btn-mini' %> |
+<% end %>
+<%= link_to 'Back', topics_path, :class => 'btn btn-mini' %>
