--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -20,7 +20,9 @@
 <p>
   <% if user_signed_in? %>
     <strong>Answer:</strong>
-    <%= @question.answer %>
+    <% if can? :update, @question %>
+      <%= @question.answer %>
+    <% end %> 
   <% end %>
 </p>
 </pre>
@@ -29,8 +31,10 @@
   <strong>Images:</strong>
   <%= "Question:"%>
   <%= image_tag @question.qimage.url(:thumb).to_s %>
-  <%= "Answer:"%>
-  <%= image_tag @question.aimage.url(:thumb).to_s %>
+  <% if can? :update, @question %>
+    <%= "Answer:"%>
+    <%= image_tag @question.aimage.url(:thumb).to_s %>
+  <% end %>
 </p>
 
 <p>
@@ -45,6 +49,7 @@
     - 
   <% end %>
 </p>
-
-<%= link_to 'Edit', edit_question_path(@question), :class => 'btn btn-mini' %> |
+<% if can? :update, @question %>
+  <%= link_to 'Edit', edit_question_path(@question), :class => 'btn btn-mini' %> |
+<% end %>
 <%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
