--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing topics</h1>
+<h2>Listing topics</h2>
 
 <table>
   <thead>
@@ -23,15 +23,20 @@
           <td><%= q.num %> <td>
         <% end %>
         <%end%>
-        <td><%= link_to 'Show', topic %></td>
-        <td><%= link_to 'Edit', edit_topic_path(topic) %></td>
-        <td><%= link_to 'Destroy', topic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', topic, :class => 'btn btn-mini' %></td>
+      <% if can? :update, topic %>
+        <td><%= link_to 'Edit', edit_topic_path(topic), :class => 'btn btn-mini' %></td>
+      <% end %>
+      <% if can? :destroy, topic %>
+        <td><%= link_to 'Destroy', topic, :class => 'btn btn-mini', method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New Topic', new_topic_path %>
-<%= link_to 'Questions', questions_path %>
+<% if can? :update, @topic %>
+  <%= link_to 'New Topic', new_topic_path, :class => 'btn btn-mini' %>
+<% end %>
+<%= link_to 'Questions', questions_path, :class => 'btn btn-mini' %>
