after page 36 plus display fixes

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -25,5 +25,14 @@ th {
    size: 3;
 }
 
+pre {
+    border: 2px solid black; 
+    font-family: Consolas,"Lucida Console", Monaco,"Courier New", Courier, monospace;
+}
+
+span.inner-pre {
+    font-size: 130%;
+    
+}
 
 
