--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,10 +53,10 @@
   </div>  
 </div>
 <%= yield %>
+<%= flash[:error] %>
 <% if user_signed_in? %>
    Signed in as <%= current_user.email %>
 <% end %>
 </div>
-
 </body>
 </html>
