--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -50,3 +50,6 @@
   <%= link_to 'Edit', edit_question_path(@question), :class => 'btn btn-mini' %> |
 <% end %>
 <%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
+<% if can? :create, Question %>
+  <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
+<% end %>
