--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -33,7 +33,7 @@
   <% if can? :update, @question  %>
   <% unless @question.aimage.url.nil? %>
     <strong>Answer Image:</strong>
-    <%= image_tag @question.aimage.url(:thumb).to_s %>
+    <%= image_tag @question.aimage.url().to_s %>
   <% end %>
   <% end %>
 </p>
@@ -53,7 +53,19 @@
 <% if can? :update, @question %>
   <%= link_to 'Edit', edit_question_path(@question), :class => 'btn btn-mini' %> |
 <% end %>
-<%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
+<%= link_to 'Back', questions_path, :class => 'btn btn-mini' %> |
 <% if can? :create, Question %>
-  <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
+  <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %> |
 <% end %>
+<% pq = Question.find_by_page_and_num(@question.page,@question.num-1)%>
+<% pid = @question.id %>
+<% unless pq.nil? %>
+    <% pid = pq.id %>
+<% end %>
+<%= link_to "Previous", Question.find(pid), :class => 'btn btn-mini' %> |
+<% nq = Question.find_by_page_and_num(@question.page,@question.num+1)%>
+<% nid = @question.id %>
+<% unless nq.nil? %>
+    <% nid = nq.id %>
+<% end %>
+<%= link_to "Next", Question.find(nid), :class => 'btn btn-mini' %> |
