--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -42,6 +42,9 @@
 
   <tbody>
     <% @questions = @questions.sort_by {|question| (question.page*100+question.num)}.reverse%>
+    <% cp = @questions.max { |a, b| a.page <=> b.page } %>
+    <% @cur_page = cp.page %>
+    <% puts @cur_page %>
     <% @questions.each do |question| %>
       <% i = 0 %>
       <% i += 1 if question.qimage?%>
