docs and static page tweaks

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <% provide(:title, '') %>
-<h1>Home Page</h1>
+<h2>Trevor Day School Math Department Problem Based Learning</h2>
 
-<p>Find me in app/views/pages/home.html.erb</p>
+<p>A site for storing/maintaining/analyzing problem based math from the Exeter curriculum</p>
