--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,2 +1,2 @@
 <h1>About Us</h1>
-<p>Find me in app/views/pages/about.html.erb</p>
+<p>This site was created by Eric Lindow, Co-Chair, Math Department, Trevor Day School</p>
