--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing question</h1>
-
+<%= link_to 'Show', @question, :class => 'btn btn-mini' %> |
+<%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
 <%= render 'form' %>
-
 <%= link_to 'Show', @question, :class => 'btn btn-mini' %> |
 <%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
