--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,6 +4,7 @@
   <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
 <% end %>
 <%= link_to 'Topics', topics_path, :class => 'btn btn-mini' %>
+<%= link_to 'Next Question', questions_path, :class => 'btn btn-mini' %>
 <%= " There are currently #{Question.count} questions in the list, spread over #{Question.maximum("page")} pages." %>
 <br>
 <%= search_form_for @q do |f| %>
@@ -18,7 +19,7 @@
     <%= f.label :qtext_cont, "Answer contains", :style => "display: inline-block"  %>
     <%= f.search_field :answer_cont, :id => "searchfpt"  %>
     <%= f.label :qtext_cont, "Notes contain", :style => "display: inline-block"  %>
-    <%= f.search_field :notes_cont, :id => "searchfpt"  %>
+    <%= f.search_field :presenter2_cont, :id => "searchfpt"  %>
     <%= f.submit %>
 <% end %>
 
