minor tweaks pg 42

--- a/app/assets/stylesheets/questions.css.scss
+++ b/app/assets/stylesheets/questions.css.scss
@@ -44,3 +44,17 @@ span.inner-pre {
   height: 1.1em;
   margin: .25em;
 }
+
+#editqa {
+  display: inline-block;
+  width: 35em;
+  height: 1.1em;
+  margin: .25em;
+}
+
+#editpresenter {
+  display: inline-block;
+  width: 14em;
+  height: 1.1em;
+  margin: .25em;
+}
