--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,7 +4,7 @@
   <%= link_to 'New Question', new_question_path, :class => 'btn btn-mini' %>
 <% end %>
 <%= link_to 'Topics', topics_path, :class => 'btn btn-mini' %>
-<%= link_to 'Next Question', questions_path, :class => 'btn btn-mini' %>
+<%= link_to 'Next Page', questions_path, :page_eq => @cur_page+=1, :class => 'btn btn-mini' %>
 <%= " There are currently #{Question.count} questions in the list, spread over #{Question.maximum("page")} pages." %>
 <br>
 <%= search_form_for @q do |f| %>
@@ -47,8 +47,8 @@
     <% @questions = @questions.sort_by {|question| (question.page*100+question.num)}.reverse%>
     <% cp = @questions.max { |a, b| a.page <=> b.page } %>
     <% qcp = Question.find_by_num('-1') %>
-    <% qcp.page = cp.page %>
-    <% qcp.save %>
+    <% qcp.page = cp.page unless cp.nil?%>
+    <% qcp.save unless cp.nil? %>
     <% @questions.each do |question| %>
     <% if question.num > 0 %>
       <% i = 0 %>
