improved page navigation 01

--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -24,6 +24,7 @@
     <%= f.number_field :page %>
     <%= f.label :level %>
     <%= f.number_field :level %>
+    <%= f.submit %>
   </div>
   <div class="field">
     <%= f.label :qtext %>
@@ -70,7 +71,7 @@
   </div>
 <% end %>
 
-<div class="actions">
+<div class="form-inline">
     <%= f.submit %>
   </div>
 <% end %>
