--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,4 +1,5 @@
-<h1>Editing question</h1>
+<% @page_title = "Edit Question" %>
+<%= @page_title %> | 
 <%= link_to 'Show', @question, :class => 'btn btn-mini' %> |
 <%= link_to 'Back', questions_path, :class => 'btn btn-mini' %>
 <%= render 'form' %>
